--- a/cnfbox-srv/requirements.txt
+++ b/cnfbox-srv/requirements.txt
@@ -3,6 +3,5 @@ Flask==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
-PyYAML==5.1.2
 Werkzeug==0.16.0
+uwsgi==2.0.18
