--- a/cnfbox-srv/app.yaml
+++ b/cnfbox-srv/app.yaml
@@ -1,4 +1,9 @@
 # [START gae_python37_custom_runtime]
 runtime: python37
+env_variables:
+  DB_HOST: ''
+  DB_USER: ''
+  DB_PASSWD: ''
+  DB_NAME: ''
 entrypoint: uwsgi --http-socket :8080 --wsgi-file main.py --callable app --master --processes 1 --threads 2
 # [END gae_python37_custom_runtime]
